manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  selector:
    app: example-app
  ports:
    - protocol: TCP
      name: https
      port: 443
      targetPort: 4000
